<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Evgeniya Zemlyanaya (@zzemlyanaya)
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 13.07.2021, 13:06
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="ru.zzemlyanaya.login.presentation.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.signup.SignUpFragment">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_xxlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/apple" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="45dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/margin_72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mandarin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_large"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up_title"
            android:textSize="@dimen/text_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSignupEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:textColorHint="@color/hintColour"
            app:boxBackgroundColor="@color/textFieldColour"
            app:boxCornerRadiusBottomEnd="@dimen/corner_15"
            app:boxCornerRadiusBottomStart="@dimen/corner_15"
            app:boxCornerRadiusTopEnd="@dimen/corner_15"
            app:boxCornerRadiusTopStart="@dimen/corner_15"
            app:boxStrokeWidth="@dimen/dimen_0"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/email_prompt"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/padding_24"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSignupPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColorHint="@color/hintColour"
            app:boxBackgroundColor="@color/textFieldColour"
            app:boxCornerRadiusBottomEnd="@dimen/corner_15"
            app:boxCornerRadiusBottomStart="@dimen/corner_15"
            app:boxCornerRadiusTopEnd="@dimen/corner_15"
            app:boxCornerRadiusTopStart="@dimen/corner_15"
            app:boxStrokeWidth="@dimen/dimen_0"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/inputSignupEmail"
            app:layout_constraintStart_toStartOf="@+id/inputSignupEmail"
            app:layout_constraintTop_toBottomOf="@+id/inputSignupEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/password_prompt"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_24"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butCreateNewAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            style="@style/Btn"
            android:background="@drawable/btn_rounded"
            android:enabled="@{viewmodel.signUpFormState.dataValid ? true : false}"
            android:text="@string/sign_up_button"
            app:layout_constraintEnd_toEndOf="@+id/inputSignupPass"
            app:layout_constraintStart_toStartOf="@+id/inputSignupPass"
            app:layout_constraintTop_toBottomOf="@+id/inputSignupPass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>